--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/css/main.css
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/css/main.css
@@ -629,9 +629,43 @@ h6 {
 
 /* LOGO CAROUSEL */
 .logo__carousel{
+  width: 100%;
+  padding: 50px;
+}
+
+.logo__car__content{
   max-width: 1200px;
   margin: 0 auto;
-  padding: 50px;
+}
+
+.logo1{
+  display: flex;
+  align-items: center;
+  padding: 20px 30px;
+  transition: 1s all;
+  cursor: pointer;
+  height: 100px;
+  transition: all 1s;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.logo1 img{
+  margin: auto;
+  width: auto;
+}
+
+.logo1::after{
+  content: "";
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 /* .logo__car__content{
@@ -644,3 +678,155 @@ h6 {
   width: 100%;
   object-fit: cover;
 } */
+/* FOOTER */
+footer{
+  background-color: #0e1b1f;
+  background-image: url(../img/bg4.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+}
+
+footer::before{
+  content: "";
+  background-image: url(../img/pattern2.png);
+  background-position: left top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+}
+
+.footer__wrap{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+  margin: 0 auto;
+}
+
+.sub{
+  min-width: 1199px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding:60px 60px;
+  box-shadow: 0 0px 30px 0 rgb(0 0 0 / 10%) ;
+  border-radius: 15px;
+  background-image: url(../img/pattern3.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.right__sc input{
+padding: 10px 20px;
+}
+
+/* .sub__content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 60px;
+  background-color: #fff;
+  box-shadow: 0 0px 30px 0 rgb(0 0 0 / 10%) ;
+  background-image: url(../img/pattern3.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
+  width: 100%;
+  position: absolute;
+  top: 10px;
+} */
+
+.footer__content{
+  display: flex;
+  color: #fff;
+  justify-content: space-between;
+  width: 100%;
+  padding:  20px 0;
+}
+
+.widget a{
+  text-decoration: none;
+  color: #636363;
+}
+
+.widget a::before{
+  content: "> ";
+}
+
+.widget li{
+  list-style: none;
+  padding: 10px 0;
+}
+
+.footer__contact ul li{
+display: flex;
+width: 100%;
+align-items: center;
+padding: 8px 0;
+}
+.footer__contact i{
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+  text-align: center;
+  border-radius: 50%;
+  background: linear-gradient(to right,#f55f8d 51%,#f8ae56 100%);
+  line-height: 40px;
+}
+
+.footer__contact span{
+  color: #636363;
+}
+
+.footer__copyright{
+  background-color: #1f343b;
+  padding: 10px 0;
+  width: 100%;
+}
+.copyright__content{
+  max-width: 1200px;
+  margin: 0 auto;
+  color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright__content a{
+  color:#f55f8d;
+  text-decoration: none;
+}
+
+.cr__right{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.cr__right i {
+  width: 32px;
+  height: 32px;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 32px;
+  margin-right: 15px;
+  transition: all .8s;
+  cursor: pointer;
+}
+
+.cr__right i:hover{
+  background: linear-gradient(to right,#f55f8d 51%,#f8ae56 100%);
+}
