--- a/Learn-JS/homework2/css/main.css
+++ b/Learn-JS/homework2/css/main.css
@@ -84,3 +84,8 @@ label{
 .curency .radio-button label{
     padding: 0 15px 0 0;
 }
+
+.number2Unit{
+    display: flex;
+    flex-direction: column;
+}
