--- a/Learn-JS/homework2/css/main.css
+++ b/Learn-JS/homework2/css/main.css
@@ -5,11 +5,48 @@
 }
 
 html,body{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Noto Sans', sans-serif;
+    background-image: url(../img/bg.jpg);
+    color: #fff;
+}
+
+.background{
+    width: 100%;
+    height: 100%;
+}
+
+.items{
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgba(51, 51, 51, 0.603);
+    text-align: center;
+    margin: 10px 0;
+    border: 1px solid #333;
+    max-width: 400px;
+}
+
+.items p {
+    color: #FFF;
+    font-weight: 700;
+}
+
+.btn{
+    padding: 15px 30px;
+    background-color: rgb(108, 206, 173);
+    color: #fff;
+    font-weight: 700;
+    border-radius: 10px;
+    transition: all .5s ease;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgb(47, 158, 121);
+    color: #fff;
 }
 
 .homework{
-    background-color: rgb(80, 247, 191);
+    background-color: rgba(201, 201, 201, 0.603);
     max-width: 1200px;
     margin: 30px auto;
     border-radius: 15px;
@@ -17,8 +54,10 @@ html,body{
 }
 .title{
     text-align: center;
+    color: #fff;
     padding: 50px;
 }
+
 .form-content{
     padding: 50px 30px;
     text-align: center;
@@ -32,6 +71,21 @@ html,body{
     padding: 10px 5px;
     border-radius: 5px;
 }
+
+.form-content a{
+    color: #fff ;
+    text-decoration: none;
+    text-align: center;
+    display: none;
+    margin-top: 30px;
+    transition: all .5s ease;
+}
+
+.form-content a:hover{
+    color: red;
+    text-decoration: underline;
+}
+
 .form-content .number{
     width: 20%;
     text-align: left;
